# Flowfile

./: .build-logs  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  FLOW_HTTP_API_REVIEW.md  MakeFile  Makefile  OUTPUT_FIELD_CONFIG_ARCHITECTURE.md  PROJECT_VERSIONING_HANDOFF.md  README.md  RUN_FLOW_AND_PARAMS_IMPLEMENTATION.md  _temp.py  add-flowframe-code-generator.md  add_classification_model.md  claude-plan.md  claude-schedule-plan.md  community.html  community_strategy_prompt.txt  conf.py  connectorx_hook.py  current-review.md  diff.txt  directory_structure.json  docker-compose.yml  error-linux  feature-md-catalog-to-delta.md  flow-registration-plan.md  flowfile-template-improvements.md  get_directory_tree.py  index.html  main.spec  master_key.txt  mkdocs.yml  objects.inv  output_csv.csv  (+12 more)
.claude/agents/: README.md  core-engineer.md  docs-writer.md  frame-engineer.md  frontend-engineer.md  kernel-engineer.md  release-engineer.md  scheduler-engineer.md  security-reviewer.md  shared-engineer.md  test-engineer.md  wasm-engineer.md  worker-engineer.md
.github/workflows/: claude-pr-review.yml  codeql.yaml  docker-publish.yml  documentation.yml  e2e-tests.yml  flowfile-wasm-build.yml  flowfile-wasm-tests.yml  lint.yml  npm-publish-wasm.yml  pypi-release.yml  release.yaml  test-docker-auth.yml  test-docker-kernel-e2e.yml  test-kafka-integration.yml  test-kernel-integration.yml  test.yaml
ai/: index.html  providers.html
build_backends/build_backends/: main.py  main_nuitka.py  main_prd.py
data/demo/: regions.csv  sales-data.csv
data/templates/: customer_churn.csv  customers.csv  generate_template_data.py  house_prices.csv  internal_products.csv  page_views.csv  products.csv  sales_data.csv  supplier_products.csv  support_tickets.csv
docs/: MakeFile  catalog-publish-from-output-node.md  community.md  conf.py  future_features.md  index.html  index.md  positioning-prompt.md  quickstart.md
docs/ai/: index.md  providers.md
docs/blog/: visual-etl-to-data-platform.md
docs/flowfile_api/: flowfile-for-developers.md  how-it-works.md  how_it_works.py  index.md
docs/flows/: building.md
docs/for-developers/: ai-architecture.md  architecture.md  creating-custom-nodes.md  custom-node-tutorial.md  design-philosophy.md  docker-deployment.md  flowfile-core.md  flowfile-for-developers.md  how-it-works.py  index.md  (+5 more)
examples/: catalog_showcase.py
flowfile/: __init__.py  api.py  readme.md
flowfile-wasm/: README.md  package-lock.json  package.json  tsconfig.json
flowfile_core/: CLAUDE.md  Dockerfile  README.md  requirements.txt
flowfile_frame/: CLAUDE.md  expr_stub_generator.py  flow_frame_stub_generator.py  readme.md  static_typing.py  submodule_stub_generator.py
flowfile_frontend/: .eslintrc.js  .prettierrc.json  BREAKING_CHANGES_FIX.md  CLAUDE.md  Dockerfile  FRONTEND_REFACTORING.md  Makefile  README.md  electron-builder.json  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js  vite.config.mjs  vitest.config.ts
flowfile_frontend/src-tauri/: .gitignore  Cargo.toml  Info.plist  SIGNING.md  build.rs  entitlements.mac.plist  tauri.conf.json
flowfile_frontend/src-tauri/capabilities/: loading.json  main.json
flowfile_frontend/src-tauri/icons/: icon.icns
flowfile_frontend/src-tauri/src/: commands.rs  env.rs  lib.rs  main.rs  menu.rs  oauth.rs  state.rs  window.rs
flowfile_frontend/src-tauri/src/sidecar/: mod.rs  readiness.rs  shutdown.rs
flowfile_scheduler/: CLAUDE.md
flowfile_wasm/: CLAUDE.md  EMBEDDING.md  EMBEDDING_PLAN.md  README.md  index.html  package-lock.json  package.json  pytest.ini  vite.config.ts  vitest.config.ts
flowfile_worker/: CLAUDE.md  Dockerfile  MONITORING_README.md  README.md  requirements.txt
flows/: building.html
for-developers/: ai-architecture.html  architecture.html  creating-custom-nodes.html  custom-node-tutorial.html  design-philosophy.html  docker-deployment.html  flowfile-core.html  index.html  kernel-architecture.html  python-api-reference.html  visualizations.html
guides/: code_generator.html  database_connectivity.html  flowfile_frame_api.html  index.html  manage_cloud_connections.html  technical_architecture.html
k8s/: README.md  configmap.yaml  flowfile-core.yaml  flowfile-frontend.yaml  flowfile-worker.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  storage.yaml
kernel_runtime/: CLAUDE.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
kernel_runtime/kernel_runtime/: api_schema.py  artifact_persistence.py  artifact_store.py  flowfile_client.py  main.py  persistence.py  schemas.py  serialization.py
kernel_runtime/kernel_runtime/lsp/: __init__.py  analysis.py  context.py  models.py
kernel_runtime/tests/: conftest.py  test_api_schema.py  test_artifact_persistence.py  test_artifact_store.py  test_artifact_store_persistence.py  test_catalog_tables.py  test_flowfile_client.py  test_global_artifacts.py  test_lsp.py  test_lsp_context.py  test_main.py  test_path_translation.py  test_persistence.py  test_persistence_api.py  test_persistence_integration.py  test_serialization.py  test_shared_files.py
local_data/: local_products.parquet
nodes/: aggregate.html  combine.html  index.html  input.html  output.html  transform.html
quickstart/: index.html
sales-website/: .gitignore  astro.config.mjs  package.json
scripts/: formula_playground_smoketest.html  gen_formula_reference.py  mkdocs_hooks.py
search/: search_index.json
shared/: CLAUDE.md  __init__.py  _version.py  artifact_storage.py  cloud_storage.py  db_reader.py  db_writer.py  delta_models.py  delta_utils.py  models.py  parent_watcher.py  path_utils.py  run_completion.py  sql_utils.py  storage_config.py  subprocess_utils.py  viz_protocol.py
stylesheets/: extra.css
tools/: bump_version.py  check_version_sync.py  generate_formula_docs.py  rename_sidecar.py  sign_macos_sidecars.sh
users/: index.html  secrets.html
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
(+2299 files in other folders)
