[tool.poetry]
name = "Flowfile"
version = "0.1.1"
description = "Project combining flowfile_designer (backend) and flowfile_worker (compute offloader)"
authors = ["Edward van Eechoud <evaneechoud@gmail.com>"]
packages = [
    { include = "flowfile_core", from = "flowfile_core"},
    { include = "flowfile_worker", from = "flowfile_worker" },
    { include = "build_backends", from = 'build_backends'},
]

[tool.poetry.dependencies]
pyinstaller = "^6.11.0"
python = ">=3.10,<3.14"
matplotlib = "~3.9.2"
fastapi = "~0.115.2"
uvicorn = "~0.32.0"
pydantic = "~2.9.2"
databases = "~0.9.0"
passlib = "~1.7.4"
pyarrow = "~17.0.0"
python-multipart = "~0.0.12"
polars = "~1.9.0"
methodtools = "~0.4.7"
faker = "~23.1.0"
XlsxWriter = "~3.2.0"
loky = "~3.4.1"
fastexcel = "~0.12.0"
openpyxl = "~3.1.2"
polars-distance = "~0.4.3"
polars-expr-transformer = "~0.3.12"
gspread = "~6.1.3"
google-api-python-client = "~2.149.0"
polars-sim = { version = "~0.1.3", markers = "sys_platform != 'win32'" } # polars-sim is not supported on windows
polars-grouper = "~0.2.0"
polars-ds = "~0.6.0"
airbyte = "~0.19.1"
airbyte-cdk = "~5.14.0"

[tool.poetry.scripts]
flowfile_worker = "flowfile_worker.main:run"  # Entry point for the command
flowfile_core = "flowfile_core.main:run"
build_backends = "build_backends.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

