[tool.poetry]
name = "Flowfile"
version = "0.1.5"
description = "Project combining flowfile_designer (backend) and flowfile_worker (compute offloader)"
authors = ["Edward van Eechoud <evaneechoud@gmail.com>"]
packages = [
    { include = "flowfile_core", from = "flowfile_core" },
    { include = "flowfile_worker", from = "flowfile_worker" },
    { include = "build_backends", from = "build_backends" },
]

[tool.poetry.dependencies]
pyinstaller = "^6.11.0"
python = ">=3.10,<3.13"
fastapi = "~0.115.2"
uvicorn = "~0.32.0"
pydantic = "~2.9.2"
databases = "~0.9.0"
passlib = "~1.7.4"
pyarrow = "^18.0.0"
python-multipart = "~0.0.12"
polars = ">1.8.2,<=1.25.2"
methodtools = "~0.4.7"
faker = "~23.1.0"
XlsxWriter = "~3.2.0"
loky = "~3.4.1"
fastexcel = "~0.12.0"
openpyxl = "~3.1.2"
polars-distance = "~0.4.3"
polars-expr-transformer = ">0.4.4.0"
gspread = "~6.1.3"
google-api-python-client = "~2.149.0"
polars-grouper = "~0.2.0"
polars-ds = ">=0.6.0"
airbyte = { url = "https://github.com/Edwardvaneechoud/PyAirbyte/releases/download/v0.20.1.dev/airbyte-0.20.1-py3-none-any.whl" }
airbyte-cdk = "^6.6.3"
pytest = "^8.3.4"
aiofiles = "^24.1.0"
keyring = "^25.6.0"
python-jose = "^3.4.0"

# Only install pendulum for Python versions below 3.12
pendulum = { version = "2.1.2", markers = "python_version < '3.12'" }
bcrypt = "^4.3.0"


[tool.poetry.scripts]
flowfile_worker = "flowfile_worker.main:run"
flowfile_core = "flowfile_core.main:run"
build_backends = "build_backends.main:main"
build_backends_prd = "build_backends.main_prd:main"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.46"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pytest]
markers = [
    "worker: Tests for the flowfile_worker package",
    "core: Tests for the flowfile_core package"
]
