[project]
name = "kernel_runtime"
version = "0.2.2"
description = "FlowFile kernel runtime - executes Python code in isolated Docker containers"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "httpx>=0.24.0",
    "cloudpickle>=3.0.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
